rules.v4
# Generated by iptables-save v1.4.12 on Tue Jul 22 18:27:25 2014
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# HTTP
-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.0.0.12:80
-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.0.0.12:443
-A PREROUTING -d 136.243.241.162 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.0.0.12:80
-A PREROUTING -d 136.243.241.162 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.0.0.12:443

# gitlab
-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 11022 -j DNAT --to-destination 10.0.0.20:11022
-A PREROUTING -d 136.243.241.162 -p tcp -m tcp --dport 22 -j DNAT --to-destination 10.0.0.20:11022
#-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 10022 -j DNAT --to-destination 10.0.0.20:10022
#-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 444 -j DNAT --to-destination 10.0.0.20:443

# ts
-A PREROUTING -d 144.76.28.6 -p udp -m udp --dport 9987 -j DNAT --to-destination 10.0.0.15:9987

# jabber
-A PREROUTING -d 144.76.28.6 -p udp -m udp --dport 5269 -j DNAT --to-destination 10.0.0.20:5269
-A PREROUTING -d 144.76.28.6 -p udp -m udp --dport 5222 -j DNAT --to-destination 10.0.0.20:5222

# shyvana
-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 4416 -j DNAT --to-destination 10.0.0.16:4416

# -A PREROUTING -i eth0 -d 144.76.28.6 -p tcp -m multiport --dports 25,143,993 -j LOG 
-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 25 -j DNAT --to-destination 10.0.0.10:25
-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 143 -j DNAT --to-destination 10.0.0.10:143
-A PREROUTING -d 144.76.28.6 -p tcp -m tcp --dport 993 -j DNAT --to-destination 10.0.0.10:993

-A POSTROUTING -s 10.0.0.12 -o eth0 -j SNAT --to-source 144.76.28.6
-A POSTROUTING -s 10.0.0.10 -o eth0 -j SNAT --to-source 144.76.28.6
-A POSTROUTING -s 10.0.0.12 -o eth0 -j SNAT --to-source 144.76.28.6

-A POSTROUTING -m conntrack -s 10.0.0.0/24 -o eth0 -j SNAT --ctstate NEW --to-source 144.76.28.6
-A POSTROUTING -s 10.0.10.0/24 -o eth0 -j MASQUERADE
COMMIT

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT


# Completed on Tue Jul 22 18:27:25 2014
# Generated by iptables-save v1.4.12 on Tue Jul 22 18:27:25 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:fail2ban-ssh - [0:0]
:fail2ban-ssh-ddos - [0:0]

#-A INPUT -j LOG
# -A INPUT -p udp -d 8.8.8.8 --dport 53 -j LOG

# allow related input connections
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

-A INPUT -i lo -j ACCEPT
-A INPUT -i br0 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT

# ICMP
-A INPUT -p icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp --icmp-type 4 -j ACCEPT
-A INPUT -p icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp --icmp-type 12 -j ACCEPT

# -A INPUT -i tun0 -s 10.0.10.0/24 -j ACCEPT
# -A INPUT -i tun0 -d 10.0.10.0/24 -j ACCEPT

# accept dns queries from vpn
# -A INPUT -i tun0 -p udp --dport 53 -j ACCEPT
# -A INPUT -i tun0 -p tcp --dport 53 -j ACCEPT

# accept dns queries from VMs
# -A INPUT -i br0 -p udp --dport 53 -j ACCEPT
# -A INPUT -i br0 -p tcp --dport 53 -j ACCEPT

-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh-ddos
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh

-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 143 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT


## FORWARD

# dont forward NEW packets from VMs to VPN
-A FORWARD -i br0 -o tun0 -m state --state NEW -j DROP

# forward everything else from VMs
-A FORWARD -i br0 -j ACCEPT

-A FORWARD -i tun0 -j ACCEPT
-A FORWARD -o br0 -j ACCEPT
-A FORWARD -i br0 -o eth0 -j ACCEPT
-A FORWARD -d 10.0.10.0/24 -o tun0 -j ACCEPT

-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT

# -A FORWARD -i tun+ -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
# -A FORWARD -i eth0 -o tun+ -m state --state RELATED,ESTABLISHED -j ACCEPT
# -A FORWARD -i tun+ -o tun+ -m state --state RELATED,ESTABLISHED -j ACCEPT

# -A FORWARD -m state --state INVALID -j DROP
#-A FORWARD -d 10.0.10.0/24 -i tun-ipv6 -j ACCEPT
#-A FORWARD -d 10.0.0.0/24 -i tun-ipv6 -j ACCEPT
#-A FORWARD -i br0 -o tun-ipv6 -j ACCEPT


-A fail2ban-ssh -s 41.41.237.138/32 -j DROP
-A fail2ban-ssh -s 41.32.68.214/32 -j DROP
-A fail2ban-ssh -j RETURN
-A fail2ban-ssh-ddos -j RETURN


# -A OUTPUT -d 8.8.8.8 -j LOG
# -A OUTPUT -o eth0 -j ACCEPT

# -A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

COMMIT

# Completed on Tue Jul 22 18:27:25 2014
# Generated by iptables-save v1.4.12 on Tue Jul 22 18:27:25 2014
# Completed on Tue Jul 22 18:27:25 2014
