rules.v6

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# -A PREROUTING -p tcp -d 2a01:4f8:191:140b::2:2/128 --dport 4022  -j LOG
# -A PREROUTING -p tcp -d 2a01:4f8:191:140b:11:12::10/128 --dport 10022  -j TPROXY --on-ip 2a01:4f8:191:140b:11:20::10/128
COMMIT


# Generated by ip6tables-save v1.4.12 on Tue Jul 22 18:27:25 2014
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# ICMP:
-A INPUT ! -i eth0 -p ipv6-icmp -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type destination-unreachable -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type packet-too-big -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type time-exceeded -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type parameter-problem -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type echo-request -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type echo-reply -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type neighbor-solicitation -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type neighbor-advertisement -j ACCEPT
-A INPUT -p ipv6-icmp --icmpv6-type 131 -i eth0 -s fe80::1 -j ACCEPT


# ICMP:
-A FORWARD -p ipv6-icmp --icmpv6-type destination-unreachable -j ACCEPT
-A FORWARD -p ipv6-icmp --icmpv6-type packet-too-big -j ACCEPT
-A FORWARD -p ipv6-icmp --icmpv6-type time-exceeded -j ACCEPT
-A FORWARD -p ipv6-icmp --icmpv6-type parameter-problem -j ACCEPT
-A FORWARD -p ipv6-icmp --icmpv6-type echo-request -j ACCEPT
-A FORWARD -p ipv6-icmp --icmpv6-type echo-reply -j ACCEPT

-A FORWARD -i br0 -o eth0 -j ACCEPT

# fizz ssh, http, https
# -A FORWARD -s 2000::/3 -p tcp -j LOG
-A FORWARD -i eth0 -o br0 -s 2000::/3 -d 2a01:4f8:191:140b:11:12::10/128 -p tcp -m multiport --dports 80,443 -j ACCEPT


# nunu (docker vm)
# -A FORWARD -i eth0 -o br0 -s 2000::/3 -d 2a01:4f8:191:140b:11:20::10/128 -p tcp -m multiport --dports 80,443,10022 -j ACCEPT
-A FORWARD -i eth0 -o br0 -s 2000::/3 -d 2a01:4f8:191:140b::2:5/128 -p tcp -m multiport --dports 80,443,10022 -j ACCEPT


-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT


COMMIT
# Completed on Tue Jul 22 18:27:25 2014
